# Knowledge-Distillation

./: .gitignore  README.md  main.py  ocr_pipeline.py  pyproject.toml
notebooks/: nlp-distilling-step-by-step.ipynb
src/: args.py  dataset.py  evaluate.py  math_utils.py  metrics.py  model_utils.py  ocr.py  preprocess.py  split.py  train.py  train_utils.py  utils.py
