[project]
name = "knowledge-distillation"
version = "0.1.0"
description = "This is our team project for CSC15006: Introduction to NLP"
readme = "README.md"
requires-python = "==3.11.*" 
dependencies = [
    "matplotlib-inline",
    "paddleocr",
    "paddlex",
    "pdf2image",
    "ppocrlabel",
    "pymupdf",
    "ruff",
    "trash-cli",
    "vietocr",
    "torch",
    "torchvision",
    "paddlepaddle",
]

[[tool.uv.index]]
name = "paddle-source"
url = "https://www.paddlepaddle.org.cn/packages/stable/cu118/"
explicit = true

[[tool.uv.index]]
name = "pytorch-cu118"
url = "https://download.pytorch.org/whl/cu118"
explicit = true

[tool.uv.sources]
torch = { index = "pytorch-cu118" }
torchvision = { index = "pytorch-cu118" }

[tool.uv]
environments = ["sys_platform == 'linux'"]
