[project]
name = "distilling-step-by-step"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "accelerate>=0.26.0",
    "datasets>=4.4.2",
    "hf-xet>=1.2.0",
    "numpy>=2.4.0",
    "pandas>=2.3.3",
    "protobuf>=6.33.2",
    "sentencepiece>=0.2.1",
    "torch>=2.9.1",
    "tqdm>=4.67.1",
    "transformers>=4.57.3",
]
